--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-    background-color: #14131A;
     color: white;
     font-family: 'Roboto', sans-serif;
 }
@@ -51,4 +50,47 @@ body {
     font-size: 16px;
     line-height: 140%;
     color: rgba(255, 255, 255, 0.8);
+}
+
+.button {
+    text-decoration: none;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.button-icon, .button-text {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.button-text {
+    font-size: 14px;
+    line-height: 16px;
+    margin-left: 10px;
+}
+
+.button-primary {
+    color: #8D0019;
+    background-color: fff;
+}
+
+.button-link {
+    color: white;
+}
+
+.button-group {
+    margin-top: 70px;
+}
+
+.venompicture {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+
+}
+
+.blood {
+    background: url(../img/blood.png) no-repeat top right, #14131A url(../img/bg.jpg) no-repeat center center / 100%;
 }
