--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #14131A;
     color: white;
     font-family: 'Roboto', sans-serif;
 }
@@ -93,4 +94,102 @@ body {
 
 .blood {
     background: url(../img/blood.png) no-repeat top right, #14131A url(../img/bg.jpg) no-repeat center center / 100%;
+}
+
+.primary-bg {
+    background: #14131A url(../img/bg.jpg) no-repeat center center / 100%;
+}
+
+.content {
+    display: flex;
+}
+
+.col {
+    flex-basis: 50%;
+}
+
+.content-title {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 21px;
+}
+
+.content-subtitle {
+    font-size: 16px;
+    line-height: 140%;
+    color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 15px;
+    margin-top: 0;
+}
+
+.content-text {
+    max-width: 423px;
+    font-size: 16px;
+    line-height: 140%;
+    color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 30px;
+}
+
+.content .list {
+    list-style: none;
+    padding: 0px;
+}
+
+.list-item {
+    line-height: 1.5;
+}
+
+.column-2 {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+    max-width: 350px;
+}
+
+.content .trailer {
+    width: 356px;
+    height: 205px;
+    background: url(../img/trailer\ \(preview\).jpg) no-repeat center / 100%;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 33px;
+}
+
+.trailer .playerpreview {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border: none;
+}
+
+.trailer .play-icon {
+    transform: translateY(2.1px);
+    cursor: pointer;
+}
+
+.poster-wrapper {
+    display: flex;
+    align-items: start;
+}
+
+.poster {
+    margin-right: 31px;
+    width: 362px;
+    border-radius: 3px;
+}
+
+.poster-wrapper .content-subtitle {
+    margin-bottom: 5px;
+}
+
+.poster-wrapper .list {
+    margin: 0;
+    margin-bottom: 20px;
 }
